fixed video alignment

--- a/style.css
+++ b/style.css
@@ -1232,6 +1232,9 @@ img {
         grid-column: 1 / 5; 
         grid-row: 2 / 6;
         padding-left: 0px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     .todoDemo hr {
         margin-top: 3px;
